# astarte-message-hub

./: .dockerignore  .envrc  .envrc.private  .gitignore  CHANGELOG.md  Cargo.lock.license  Cargo.toml  Cross.toml  README.md  REUSE.toml  _typos.toml  build.rs  codecov.yml  committed.toml  flake.nix  pyproject.toml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: codecov.yaml  dependabot.yml
.github/actions/install-deps/: action.yaml
.github/workflows/: build.yaml  check.yaml  ci-release.yaml  ci.yaml  codecov.yaml  common.yaml  coverage.yaml  dco.yaml  dockerhub-publish-release.yaml  dockerhub-publish-snapshot.yaml  e2e-test.yaml  fmt.yaml  ghcr-publish-release.yaml  ghcr-publish-snapshot.yaml  multi-platform.yaml  publish.yaml  reuse-lint.yaml  test.yaml  warmup-caches.yaml
.reuse/: dep5
.reuse/templates/: apache-2.jinja2
astarte-message-hub/: Cargo.toml
astarte-message-hub-proto/: Cargo.toml  build.rs
astarte-message-hub-proto/proto/astarteplatform/msghub/: astarte_type.proto  message_hub_service.proto
astarte-message-hub-proto/src/: astarte_device_sdk_types.rs  error.rs  lib.rs  proto_message_hub.rs  types.rs
astarte-message-hub/src/: astarte_message_hub.rs  error.rs  lib.rs  main.rs
astarte-message-hub/src/config/: http.rs  mod.rs  protobuf.rs
astarte-message-hub/src/data/: astarte.rs  astarte_handler.rs  mock_astarte_sdk.rs
docs/: ARCHITECTURE.md
e2e-test/: Cargo.toml
e2e-test/interfaces/: org.astarte-platform.rust.e2etest.DeviceAggregate.json  org.astarte-platform.rust.e2etest.DeviceDatastream.json  org.astarte-platform.rust.e2etest.DeviceProperty.json  org.astarte-platform.rust.e2etest.ServerAggregate.json  org.astarte-platform.rust.e2etest.ServerDatastream.json  org.astarte-platform.rust.e2etest.ServerProperty.json
e2e-test/interfaces/additional/: org.astarte-platform.rust.e2etest.AdditionalDeviceDatastream.json  org.astarte-platform.rust.e2etest.AdditionalServerDatastream.json
e2e-test/src/: api.rs  device_sdk.rs  hub.rs  interfaces.rs  main.rs  message_hub.rs  mock_data_aggregate.rs  mock_data_datastream.rs  mock_data_property.rs  node.rs  utils.rs
examples/: README.md  message-hub-config.toml
examples/client/: README.md  main.rs
examples/client/interfaces/: org.astarte-platform.rust.examples.datastream.DeviceDatastream.json  org.astarte-platform.rust.examples.datastream.ServerDatastream.json
proto/astarteplatform/msghub/: astarte_message.proto  astarte_type.proto  config.proto  interface.proto  message_hub_service.proto  node.proto
scripts/: check-for-publish.sh  e2e.sh
scripts/ci/: add-copyright-to-modified.sh  check-for-publish.sh  copyright.sh  coverage.sh
scripts/cross/: Containerfile  build.sh
scripts/docker/: Dockerfile  README.md  build.sh  entrypoint.sh  message-hub-config.toml
snapshots/: astarte_message_hub__config__file__test__0.snap  astarte_message_hub__config__file__test__1.snap  astarte_message_hub__config__file__test__2.snap  astarte_message_hub__config__file__test__ser_and_de_config-2.snap  astarte_message_hub__config__file__test__ser_and_de_config-3.snap  astarte_message_hub__config__file__test__ser_and_de_config.snap
src/: astarte_device_sdk_types.rs  astarte_message_hub.rs  astarte_sdk_types.rs  cache.rs  cli.rs  device.rs  error.rs  events.rs  fdo.rs  lib.rs  main.rs  messages.rs  proto_message_hub.rs  server.rs  store.rs  tasks.rs  types.rs
src/astarte/: handler.rs  mod.rs  sdk.rs
src/config/: dbus.rs  file.rs  grpc.rs  http.rs  loader.rs  mod.rs  protobuf.rs
src/config/dynamic/: grpc.rs  http.rs  mod.rs
src/config/file/: dynamic.rs  fdo.rs  mod.rs  sdk.rs
src/data/: astarte.rs  astarte_handler.rs  astarte_provider.rs  mock_astarte.rs  mock_astarte_sdk.rs  mod.rs
