# This file is part of Astarte.
#
# Copyright 2022 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "3"
members = ["e2e-test"]

[workspace.package]
version = "0.8.2"
edition = "2021"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
repository = "https://github.com/astarte-platform/astarte-message-hub"
rust-version = "1.78.0"

[package]
name = "astarte-message-hub"
version = { workspace = true }
categories = ["network-programming"]
documentation = "https://docs.rs/astarte-message-hub"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["sdk", "iot", "astarte"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "A central service that runs on (Linux) devices for collecting and delivering messages from N apps using 1 MQTT connection to Astarte"

[features]
vendored = ["dep:rusqlite", "rusqlite/bundled"]
bindgen = ["dep:aws-lc-rs", "aws-lc-rs/bindgen", "dep:rusqlite", "rusqlite/buildtime_bindgen"]
# Feature to make it easier to cross compile the astarte message hub
cross = ["vendored", "bindgen"]

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive", "message-hub"] }
astarte-interfaces = { workspace = true }
astarte-message-hub-proto = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
displaydoc = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stable-eyre = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
zbus = { workspace = true, default-features = false, features = ["tokio"] }

# C dependencies
aws-lc-rs = { version = "1.15.1", optional = true }
rusqlite = { version = "0.32.1", optional = true }

[dev-dependencies]
astarte-device-sdk-mock = { workspace = true }
mockall = { workspace = true }
reqwest = { workspace = true, features = ["charset", "http2", "system-proxy", "rustls-tls-manual-roots-no-provider"] }
serial_test = { workspace = true }
tempfile = { workspace = true }

[workspace.dependencies]
astarte-device-sdk = "0.10.5"
astarte-device-sdk-mock = "0.10.5"
astarte-interfaces = "0.1.1"
astarte-message-hub-proto = "0.8.3"
async-trait = "0.1.89"
axum = "0.8.7"
base64 = "0.22.1"
chrono = "0.4.42"
clap = "4.5.53"
color-eyre = "0.6.5"
displaydoc = "0.2.5"
eyre = "0.6.12"
futures = "0.3.31"
hyper = "1.8.1"
itertools = "0.14.0"
log = "0.4.29"
mockall = "0.14.0"
pbjson-types = "0.7.0"
prost = "0.14.1"
reqwest = { version = "0.12.24", default-features = false }
rustls = "0.23.35"
serde = "1.0.228"
serde_json = "1.0.145"
serial_test = "3.2.0"
stable-eyre = "0.2.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
toml = "0.9.8"
tonic = "0.12.3"
tower = "0.5.2"
tower-http = "0.6.7"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = "1.19.0"
zbus = { version = "5.12.0", default-features = false }



[profile.release]
strip = true
# Similar to fat in term of performances, but takes substantially less time to run
lto = "thin"
debug = true
# Supported by all platform
split-debuginfo = "packed"
