# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub-proto"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = {version = "0.5.1" , features = ["derive"]}
chrono = "0.4.24"
tonic = "0.8.2"
prost = "0.11.3"
pbjson-types = "0.5"
thiserror = "1.0"
uuid = "1.3.4"

[build-dependencies]
tonic-build = "0.8.2"
