# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = {workspace = true, features = ["derive"]}
chrono.workspace = true
tonic.workspace = true
prost.workspace = true
pbjson-types.workspace = true
thiserror.workspace = true
uuid.workspace = true

[build-dependencies]
tonic-build.workspace = true
