# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "astarte-message-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies.astarte-message-hub-proto]
path = "../astarte-message-hub-proto"

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
async-trait = "0.1.68"
axum = "0.5.17"
chrono.workspace = true
clap = { version = "3.2.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
pbjson-types.workspace = true
prost.workspace = true
serde = "1.0.160"
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1.27.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-stream = { version = "0.1.12", features = ["net"] }
toml = "0.5.9"
tonic.workspace = true
uuid.workspace = true
zbus = { version = "=2.2.0", default-features = false, features = ["tokio"] }
zvariant = "=3.2.1"

[dev-dependencies]
mockall = "0.11.4"
reqwest = { version = "0.11", features = ["json"] }
serial_test = "2"
tempfile = "3.5.0"

[build-dependencies]
tonic-build.workspace = true
