# This file is part of Astarte.
#
# Copyright 2023 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "e2e-test"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
astarte-message-hub = { path = ".." }
base64 = "0.21.2"
colored = "2.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
